--- a/src/shoreline/GUI/View/TestFile.fxml
+++ b/src/shoreline/GUI/View/TestFile.fxml
@@ -2,10 +2,13 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
 <SplitPane dividerPositions="0.27816901408450706" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="679.0" prefWidth="1029.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shoreline.GUI.Controller.TestFileController">
@@ -16,11 +19,11 @@
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                      <children>
-                        <JFXButton layoutX="53.0" layoutY="14.0" onAction="#chooseFileEvent" prefHeight="57.0" prefWidth="136.0" text="Select Import data" AnchorPane.leftAnchor="44.0" AnchorPane.rightAnchor="52.0">
+                        <JFXButton fx:id="selectImportBtn" layoutX="35.0" layoutY="14.0" onAction="#chooseFileEvent" prefHeight="57.0" prefWidth="211.0" text="Select Import data" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="34.0">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font></JFXButton>
-                        <JFXButton layoutX="44.0" layoutY="219.0" onAction="#convertData" prefHeight="47.0" prefWidth="185.0" text="Convert">
+                        <JFXButton fx:id="selectOutputBtn" layoutX="35.0" layoutY="81.0" onAction="#chooseFileEvent" prefHeight="57.0" prefWidth="211.0" text="Select Output format" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="34.0">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
@@ -35,7 +38,21 @@
                               <Font size="19.0" />
                            </font>
                         </Label>
-                        <JFXButton layoutX="229.0" layoutY="5.0" onAction="#addInput" text="-&gt;" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                        <JFXButton layoutX="230.0" onAction="#addInput" prefHeight="41.0" prefWidth="37.0" text=" " AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <graphic>
+                              <FontAwesomeIconView glyphName="ARROW_RIGHT" size="30" wrappingWidth="21.85714340209961" />
+                           </graphic>
+                           <ripplerFill>
+                              <LinearGradient endX="1.0" endY="1.0" proportional="false">
+                                 <stops>
+                                    <Stop color="#359bda" />
+                                    <Stop color="#359bda" offset="0.007246376811594203" />
+                                    <Stop color="#359bda" offset="0.007246376811594203" />
+                                    <Stop color="#359bda" offset="1.0" />
+                                 </stops>
+                              </LinearGradient>
+                           </ripplerFill>
+                        </JFXButton>
                      </children>
                   </AnchorPane>
               </items>
@@ -57,11 +74,52 @@
                   </AnchorPane>
               </items>
             </SplitPane>
-            <JFXTextField fx:id="hardValueTxtField" layoutY="169.0" prefHeight="31.0" prefWidth="123.0" promptText="Insert Hard Value" />
-            <JFXButton layoutX="133.0" layoutY="172.0" onAction="#addHardValue" text="Add" />
-            <JFXButton layoutX="271.0" layoutY="169.0" onAction="#moveInputUp" text="UP" />
-            <JFXButton layoutX="310.0" layoutY="169.0" onAction="#moveInputDown" text="Down" />
-            <JFXButton layoutX="184.0" layoutY="172.0" onAction="#removeInput" text="Remove" />
+            <JFXTextField fx:id="hardValueTxtField" layoutY="162.0" prefHeight="31.0" prefWidth="123.0" promptText="Insert Hard Value" />
+            <JFXButton layoutX="136.0" layoutY="157.0" onAction="#addHardValue" prefHeight="41.0" prefWidth="58.0" ripplerFill="#369dd9" text="Add" />
+            <JFXButton fx:id="moveInputDownBtn" layoutX="326.0" layoutY="157.0" onAction="#moveInputDown" prefHeight="41.0" prefWidth="37.0" text=" ">
+               <graphic>
+                  <FontAwesomeIconView glyphName="ARROW_DOWN" size="30" wrappingWidth="21.85714340209961" />
+               </graphic>
+               <ripplerFill>
+                  <LinearGradient endX="1.0" endY="1.0">
+                     <stops>
+                        <Stop color="#359bda" />
+                        <Stop color="#359bda" offset="0.007246376811594203" />
+                        <Stop color="#359bda" offset="1.0" />
+                     </stops>
+                  </LinearGradient>
+               </ripplerFill></JFXButton>
+            <JFXButton layoutX="195.0" layoutY="157.0" onAction="#removeInput" prefHeight="41.0" prefWidth="81.0" text="Remove">
+               <ripplerFill>
+                  <LinearGradient endX="1.0" endY="1.0" proportional="false">
+                     <stops>
+                        <Stop color="#359bda" />
+                        <Stop color="#359bda" offset="0.007246376811594203" />
+                        <Stop color="#359bda" offset="0.007246376811594203" />
+                        <Stop color="#359bda" offset="1.0" />
+                     </stops>
+                  </LinearGradient>
+               </ripplerFill></JFXButton>
+            <JFXButton fx:id="moveInputUpBtn" layoutX="276.0" layoutY="157.0" onAction="#moveInputUp" prefHeight="41.0" prefWidth="37.0" text=" ">
+               <graphic>
+                  <FontAwesomeIconView glyphName="ARROW_UP" size="30" wrappingWidth="21.85714340209961" />
+               </graphic>
+               <ripplerFill>
+                  <LinearGradient endX="1.0" endY="1.0" proportional="false">
+                     <stops>
+                        <Stop color="#359bda" />
+                        <Stop color="#359bda" offset="0.007246376811594203" />
+                        <Stop color="#359bda" offset="0.007246376811594203" />
+                        <Stop color="#359bda" offset="1.0" />
+                     </stops>
+                  </LinearGradient>
+               </ripplerFill>
+            </JFXButton>
+            <JFXButton fx:id="convertBtn" layoutX="496.0" layoutY="14.0" onAction="#convertData" prefHeight="47.0" prefWidth="227.0" text="Convert" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </JFXButton>
          </children></AnchorPane>
   </items>
 </SplitPane>
