--- a/src/shoreline/GUI/View/LogView.fxml
+++ b/src/shoreline/GUI/View/LogView.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-
 
 <BorderPane prefHeight="671.0" prefWidth="985.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shoreline.GUI.Controller.LogViewController">
    <center>
@@ -24,6 +24,9 @@
       </AnchorPane>
    </center>
    <top>
-      <AnchorPane prefHeight="135.0" prefWidth="985.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="135.0" prefWidth="985.0" BorderPane.alignment="CENTER">
+         <children>
+            <JFXTextField fx:id="searchTxtField" layoutY="96.0" onKeyReleased="#searchEvent" prefHeight="31.0" prefWidth="985.0" promptText="Search " />
+         </children></AnchorPane>
    </top>
 </BorderPane>
