--- a/src/shoreline/GUI/View/MainWindow.fxml
+++ b/src/shoreline/GUI/View/MainWindow.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shoreline.GUI.Controller.MainWindowController">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shoreline.GUI.Controller.MainWindowController">
    <center>
       <AnchorPane fx:id="anchorpane" prefHeight="232.0" prefWidth="549.0" BorderPane.alignment="CENTER">
          <children>
             <AnchorPane fx:id="loginPane" layoutX="276.0" layoutY="31.0" prefHeight="311.0" prefWidth="249.0" style=": ;">
                <children>
-                  <JFXTextField fx:id="userTxtField" layoutX="47.0" layoutY="198.0" prefHeight="25.0" prefWidth="156.0" promptText="example123@email.com" style=": ;">
+                  <JFXTextField fx:id="userTxtField" focusColor="#1a99cc" layoutX="47.0" layoutY="198.0" prefHeight="25.0" prefWidth="156.0" promptText="example123@email.com" style=": ;">
                      <font>
                         <Font name="System Italic" size="12.0" />
                      </font></JFXTextField>
