--- a/src/shoreline/res/Logview.css
+++ b/src/shoreline/res/Logview.css
@@ -8,27 +8,18 @@ and open the template in the editor.
     Author     : Kent Juul
 */
 
-#actionLogTableView{
-   -fx-background-color: #F0F8FF; 
-   
- 
-    
-    
-}
-
 .table-view .table-cell{
     -fx-text-fill: black;
+    
 }
 
 .table-row-cell{
     -fx-background-color: -fx-table-cell-border-color, #f0f8ff;
     -fx-background-insets: 0, 0 0 1 0;
     -fx-padding: 0.0em; 
+    border-color: #F0F8FF; 
 }
-.table-view:row-selection{
-    
-    
-}
+
 
 .table-row-cell:even{
     -fx-background-color: -fx-table-cell-border-color, #FFFFFF;
@@ -36,13 +27,22 @@ and open the template in the editor.
     -fx-padding: 0.0em; /* 0 */  
 
 }
-.root{
-    
-  -fx-background-color: #F0F8FF;    
-}
+
 
 .table-column .label{
-    -fx-background-color: #2663a5;
+    -fx-background-color: #1a99cc;
     -fx-text-fill: white;
+    -fx-cursor:null;
     
+    
+    
+}
+
+
+
+
+.table-row-cell:selected{
+    
+ -fx-background-color: #1a99cc;
+ -fx-font-color: black;
 }
