--- a/src/shoreline/res/Logview.css
+++ b/src/shoreline/res/Logview.css
@@ -38,6 +38,12 @@ and open the template in the editor.
     
 }
 
+.table-view .arrow {
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+    -fx-shape: " ";
+}
+
 
 
 
@@ -45,4 +51,6 @@ and open the template in the editor.
     
  -fx-background-color: #1a99cc;
  -fx-font-color: black;
+ alignment-adjust: 0;
 }
+
