--- a/src/shoreline/GUI/View/MainView.fxml
+++ b/src/shoreline/GUI/View/MainView.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -11,7 +10,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.27816901408450706" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="679.0" prefWidth="1029.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shoreline.GUI.Controller.TestFileController">
+<SplitPane dividerPositions="0.27816901408450706" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="679.0" prefWidth="1029.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shoreline.GUI.Controller.MainViewController">
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
@@ -19,16 +18,16 @@
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                      <children>
-                        <JFXButton fx:id="selectImportBtn" layoutX="36.0" layoutY="23.0" onAction="#chooseFileEvent" prefHeight="50.0" prefWidth="185.0" text="Select Import data" AnchorPane.leftAnchor="36.0" AnchorPane.rightAnchor="60.0">
+                        <JFXButton layoutX="36.0" layoutY="23.0" onAction="#chooseFileEvent" prefHeight="50.0" prefWidth="185.0" text="Select Import data" AnchorPane.leftAnchor="36.0" AnchorPane.rightAnchor="60.0">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font></JFXButton>
-                        <JFXButton fx:id="logBtn" layoutX="36.0" layoutY="247.0" onAction="#viewLogEvent" prefHeight="50.0" prefWidth="185.0" text="View Log">
+                        <JFXButton layoutX="36.0" layoutY="247.0" onAction="#viewLogEvent" prefHeight="50.0" prefWidth="185.0" text="View Log">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton fx:id="convertBtn" layoutX="36.0" layoutY="136.0" onAction="#convertData" prefHeight="50.0" prefWidth="185.0" text="Convert" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="136.0">
+                        <JFXButton layoutX="36.0" layoutY="182.0" onAction="#viewTasksEvent" prefHeight="50.0" prefWidth="185.0" text="View Tasks">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
@@ -37,7 +36,6 @@
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="297.0" prefWidth="249.0">
                      <children>
-                        <ListView fx:id="importDataList" layoutX="40.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
                         <Label layoutX="28.0" layoutY="14.0" maxHeight="40.0" prefHeight="40.0" prefWidth="280.0" text="Import Data values" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="19.0" />
@@ -58,6 +56,7 @@
                               </LinearGradient>
                            </ripplerFill>
                         </JFXButton>
+                        <ListView fx:id="importListView" layoutX="41.0" layoutY="92.0" prefHeight="334.0" prefWidth="281.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
                      </children>
                   </AnchorPane>
               </items>
@@ -69,19 +68,17 @@
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                      <children>
-                        <ListView fx:id="inputDataList" layoutX="100.0" layoutY="58.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <ListView fx:id="inputListView" layoutX="71.0" layoutY="149.0" prefHeight="475.0" prefWidth="365.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                      </children>
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                      <children>
-                        <ListView fx:id="outputDataList" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <ListView fx:id="outputListView" layoutX="83.0" layoutY="138.0" prefHeight="475.0" prefWidth="365.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                      </children>
                   </AnchorPane>
               </items>
             </SplitPane>
-            <JFXTextField fx:id="hardValueTxtField" layoutY="162.0" prefHeight="31.0" prefWidth="123.0" promptText="Insert Hard Value" />
-            <JFXButton layoutX="136.0" layoutY="157.0" onAction="#addHardValue" prefHeight="41.0" prefWidth="58.0" ripplerFill="#369dd9" text="Add" />
-            <JFXButton fx:id="moveInputDownBtn" layoutX="326.0" layoutY="157.0" onAction="#moveInputDown" prefHeight="41.0" prefWidth="37.0" text=" ">
+            <JFXButton layoutX="211.0" layoutY="157.0" onAction="#moveInputDown" prefHeight="41.0" prefWidth="37.0" text=" ">
                <graphic>
                   <FontAwesomeIconView glyphName="ARROW_DOWN" size="30" wrappingWidth="21.85714340209961" />
                </graphic>
@@ -94,18 +91,7 @@
                      </stops>
                   </LinearGradient>
                </ripplerFill></JFXButton>
-            <JFXButton layoutX="195.0" layoutY="157.0" onAction="#removeInput" prefHeight="41.0" prefWidth="81.0" text="Remove">
-               <ripplerFill>
-                  <LinearGradient endX="1.0" endY="1.0" proportional="false">
-                     <stops>
-                        <Stop color="#359bda" />
-                        <Stop color="#359bda" offset="0.007246376811594203" />
-                        <Stop color="#359bda" offset="0.007246376811594203" />
-                        <Stop color="#359bda" offset="1.0" />
-                     </stops>
-                  </LinearGradient>
-               </ripplerFill></JFXButton>
-            <JFXButton fx:id="moveInputUpBtn" layoutX="276.0" layoutY="157.0" onAction="#moveInputUp" prefHeight="41.0" prefWidth="37.0" text=" ">
+            <JFXButton layoutX="126.0" layoutY="157.0" onAction="#moveInputUp" prefHeight="41.0" prefWidth="37.0" text=" ">
                <graphic>
                   <FontAwesomeIconView glyphName="ARROW_UP" size="30" wrappingWidth="21.85714340209961" />
                </graphic>
@@ -119,6 +105,11 @@
                      </stops>
                   </LinearGradient>
                </ripplerFill>
+            </JFXButton>
+            <JFXButton layoutX="599.0" layoutY="10.0" onAction="#saveTaskEvent" prefHeight="50.0" prefWidth="185.0" text="Save Task" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
             </JFXButton>
          </children></AnchorPane>
   </items>
