--- a/src/shoreline/res/MainView.css
+++ b/src/shoreline/res/MainView.css
@@ -7,21 +7,32 @@ and open the template in the editor.
     Created on : 03-05-2018, 10:36:43
     Author     : frederik
 */
-#selectImportBtn, #selectOutputBtn, #convertBtn, #logBtn{
-   
 
 
-    
+.root{
+    -fx-background-color: #F0F8FF; 
 }
 
-.jfx-button{
+#naviPane, #importPane{
+    -fx-background-color: #F0F8FF; 
+}
+
+#importDataBtn, #viewTaskBtn, #viewLogBtn, #saveTaskBtn{
+   
     -fx-background-color: #1a99cc;
     -fx-text-fill: white;
-    -fx-border-radius: 7px;
-    -fx-background-radius: 8px;
-    -fx-border-color: white;
     -fx-font-size: 15px;
+
+   
+    -fx-border-radius: 5;
+    -fx-background-radius: 7;
 }
+#importDataBtn:hover, #viewTaskBtn:hover, #viewLogBtn:hover, #saveTaskBtn:hover{
+    -fx-border-color: White;
+    -fx-border-width: 2;
+    -fx-border-radius: 5;
+}
+
 
 
 
