--- a/src/shoreline/GUI/View/LogView.fxml
+++ b/src/shoreline/GUI/View/LogView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="671.0" prefWidth="985.0" stylesheets="@../../res/Logview.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shoreline.GUI.Controller.LogViewController">
+<BorderPane prefHeight="671.0" prefWidth="985.0" stylesheets="@../../res/Logview.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shoreline.GUI.Controller.LogViewController">
    <center>
       <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -16,9 +16,12 @@
                 <TableColumn fx:id="lastNameColumn" minWidth="0.0" prefWidth="158.0" text="Last Name" />
                   <TableColumn fx:id="emailColumn" prefWidth="206.0" text="Email" />
                   <TableColumn fx:id="dateColumn" prefWidth="113.0" text="Date" />
-                  <TableColumn fx:id="timeColumn" prefWidth="107.0" text="Time" />
-                  <TableColumn fx:id="actionColumn" prefWidth="256.0" text="Action" />
+                  <TableColumn fx:id="timeColumn" prefWidth="117.0" text="Time" />
+                  <TableColumn fx:id="actionColumn" prefWidth="246.0" text="Action" />
               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
          </children>
       </AnchorPane>
