--- a/src/shoreline/res/LoginView.css
+++ b/src/shoreline/res/LoginView.css
@@ -19,13 +19,21 @@ and open the template in the editor.
     -fx-background-color: #1a99cc;
     -fx-text-fill: white;
     -fx-font-size: 15px;
-    -fx-border-radius: 8px;
-    -fx-background-radius: 8px;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
-    -fx-border-color: white;
 
-    
+   
+    -fx-border-radius: 5;
+    -fx-background-radius: 7;
 }
+
+.jfx-button:hover{
+ -fx-border-color: White;
+    -fx-border-width: 2;
+        -fx-border-radius: 5;
+
+}
+
+
+
 .jfx-text-field{
     -fx-background-color: #1a99cc;
 }
