--- a/src/shoreline/res/Logview.css
+++ b/src/shoreline/res/Logview.css
@@ -8,6 +8,10 @@ and open the template in the editor.
     Author     : Kent Juul
 */
 
+.root{
+    -fx-background-color: #F0F8FF; 
+}
+
 .table-view .table-cell{
     -fx-text-fill: black;
     
