--- a/src/shoreline/GUI/View/LogView.fxml
+++ b/src/shoreline/GUI/View/LogView.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="671.0" prefWidth="985.0" stylesheets="@../../res/Logview.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shoreline.GUI.Controller.LogViewController">
+<BorderPane prefHeight="671.0" prefWidth="985.0" stylesheets="@../../res/Logview.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shoreline.GUI.Controller.LogViewController">
    <center>
       <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0">
          <children>
             <TableView fx:id="actionLogTableView" layoutX="322.0" layoutY="223.0" prefHeight="200.0" prefWidth="200.0" stylesheets="@../../res/Logview.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columns>
                 <TableColumn fx:id="firstNameColumn" prefWidth="144.0" text="First Name" />
-                <TableColumn fx:id="lastNameColumn" minWidth="0.0" prefWidth="158.0" text="Last Name" />
+                <TableColumn fx:id="lastNameColumn" maxWidth="158.0" minWidth="0.0" prefWidth="158.0" text="Last Name" />
                   <TableColumn fx:id="emailColumn" prefWidth="206.0" text="Email" />
                   <TableColumn fx:id="dateColumn" prefWidth="113.0" text="Date" />
                   <TableColumn fx:id="timeColumn" prefWidth="117.0" text="Time" />
