--- a/src/shoreline/res/TaskView.css
+++ b/src/shoreline/res/TaskView.css
@@ -8,3 +8,54 @@ and open the template in the editor.
     Author     : Frederik Tubæk
 */
 
+.table-row-cell{
+    -fx-background-color: -fx-table-cell-border-color, #f0f8ff;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em; 
+    border-color: #F0F8FF; 
+}
+
+
+.table-row-cell:even{
+    -fx-background-color: -fx-table-cell-border-color, #FFFFFF;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em; /* 0 */ }
+
+.table-row-cell:selected{
+    
+ -fx-background-color: #1a99cc;
+ -fx-font-color: black;
+ alignment-adjust: 0;
+}
+.table-column .label{
+    -fx-background-color: #1a99cc;
+    -fx-text-fill: white;
+    -fx-cursor:null;
+    -fx-width: 180px; 
+    -fx-table-layout: fixed;
+    
+    
+}
+
+.table-view .arrow {
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+    -fx-shape: null;
+    
+    
+}
+
+.root{
+    -fx-background-color: #F0F8FF; 
+}
+.jfx-button{
+    
+    -fx-background-color: #1a99cc;
+    -fx-text-fill: white;
+    -fx-font-size: 15px;
+
+   
+    -fx-border-radius: 5;
+    -fx-background-radius: 7;  
+    
+}
