--- a/src/shoreline/res/TaskView.css
+++ b/src/shoreline/res/TaskView.css
@@ -27,23 +27,16 @@ and open the template in the editor.
  -fx-font-color: black;
  alignment-adjust: 0;
 }
-.table-column .label{
+
+.table-column .column-header-background{
+    -fx-background-color: #1a99cc; 
+}
+.table-view .column-header{
     -fx-background-color: #1a99cc;
-    -fx-text-fill: white;
-    -fx-cursor:null;
-    -fx-width: 180px; 
-    -fx-table-layout: fixed;
-    
-    
 }
 
-.table-view .arrow {
-    -fx-background-insets: 0;
-    -fx-padding: 0;
-    -fx-shape: null;
     
-    
-}
+  
 
 .root{
     -fx-background-color: #F0F8FF; 
@@ -59,3 +52,4 @@ and open the template in the editor.
     -fx-background-radius: 7;  
     
 }
+
