--- a/src/shoreline/res/Logview.css
+++ b/src/shoreline/res/Logview.css
@@ -47,5 +47,6 @@ and open the template in the editor.
  -fx-background-color: #1a99cc;
  -fx-font-color: black;
  alignment-adjust: 0;
+  -fx-border-color: white;
 }
 
