--- a/src/shoreline/GUI/View/MainView.fxml
+++ b/src/shoreline/GUI/View/MainView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -79,7 +80,7 @@
                   </AnchorPane>
               </items>
             </SplitPane>
-            <JFXButton fx:id="moveDownBtn" layoutX="288.0" layoutY="157.0" onAction="#moveInputDown" prefHeight="41.0" prefWidth="37.0" text=" ">
+            <JFXButton fx:id="moveDownBtn" layoutX="315.0" layoutY="158.0" onAction="#moveInputDown" prefHeight="41.0" prefWidth="37.0" text=" ">
                <graphic>
                   <FontAwesomeIconView glyphName="ARROW_DOWN" size="30" wrappingWidth="21.85714340209961" />
                </graphic>
@@ -92,7 +93,7 @@
                      </stops>
                   </LinearGradient>
                </ripplerFill></JFXButton>
-            <JFXButton fx:id="moveUpBtn" layoutX="238.0" layoutY="157.0" onAction="#moveInputUp" prefHeight="41.0" prefWidth="37.0" text=" ">
+            <JFXButton fx:id="moveUpBtn" layoutX="269.0" layoutY="158.0" onAction="#moveInputUp" prefHeight="41.0" prefWidth="37.0" text=" ">
                <graphic>
                   <FontAwesomeIconView glyphName="ARROW_UP" size="30" wrappingWidth="21.85714340209961" />
                </graphic>
@@ -116,6 +117,34 @@
                <font>
                   <Font size="18.0" />
                </font>
+            </JFXButton>
+            <JFXButton fx:id="clearAllBtn" layoutX="543.0" layoutY="128.0" onAction="#clearAllEvent" prefHeight="50.0" prefWidth="185.0" text="Clear All">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXButton>
+            <JFXButton layoutX="197.0" layoutY="158.0" onAction="#removeInputEvent" prefHeight="40.0" prefWidth="59.0" text="Remove">
+               <ripplerFill>
+                  <LinearGradient endX="1.0" endY="1.0">
+                     <stops>
+                        <Stop color="#359bda" />
+                        <Stop color="#359bda" offset="1.0" />
+                     </stops>
+                  </LinearGradient>
+               </ripplerFill>
+            </JFXButton>
+            <JFXTextField fx:id="staticValueTxtField" layoutY="159.0" prefHeight="40.0" prefWidth="144.0" promptText="Insert Static Value Here" />
+            <JFXButton layoutX="159.0" layoutY="158.0" onAction="#addStaticValueEvent" prefHeight="40.0" prefWidth="38.0" text="Add">
+               <ripplerFill>
+                  <LinearGradient endX="1.0" endY="1.0" proportional="false">
+                     <stops>
+                        <Stop color="#359bda" />
+                        <Stop color="#359bda" offset="0.007662835249042145" />
+                        <Stop color="#369dd9" offset="0.007662835249042145" />
+                        <Stop color="#359bda" offset="1.0" />
+                     </stops>
+                  </LinearGradient>
+               </ripplerFill>
             </JFXButton>
          </children></AnchorPane>
   </items>
