--- a/src/shoreline/res/MainView.css
+++ b/src/shoreline/res/MainView.css
@@ -17,7 +17,7 @@ and open the template in the editor.
     -fx-background-color: #F0F8FF; 
 }
 
-#importDataBtn, #viewTaskBtn, #viewLogBtn, #saveTaskBtn, #saveMappingBtn, #AutoConversionBtn{
+#importDataBtn, #viewTaskBtn, #viewLogBtn, #saveTaskBtn, #saveMappingBtn, #AutoConversionBtn, #clearAllBtn{
    
     -fx-background-color: #1a99cc;
     -fx-text-fill: white;
@@ -27,7 +27,7 @@ and open the template in the editor.
     -fx-border-radius: 5;
     -fx-background-radius: 7;
 }
-#importDataBtn:hover, #viewTaskBtn:hover, #viewLogBtn:hover, #saveTaskBtn:hover{
+#importDataBtn:hover, #viewTaskBtn:hover, #viewLogBtn:hover, #saveTaskBtn:hover ,#saveMappingBtn:hover, #AutoConversionBtn:hover, #clearAllBtn:hover {
     -fx-border-color: White;
     -fx-border-width: 2;
     -fx-border-radius: 5;
